# Voxel_Renderer

./: .gitmodules  CMakeLists.txt  Makefile  README.md
Voxel_Renderer/: Makefile  a.out  compute_pixels_kernel.cl  engine.h  main.cpp
Voxel_Renderer/src/: Makefile  compute_pixels_kernel.cl  main.cpp  procedural_generation.h
Voxel_Renderer/utils/: engine.h
Voxel_Renderer_1.1/: Makefile  a.out  main.cpp  types.h
Voxel_Renderer_OpenCL/: Makefile  a.out  compute_pixels_kernel.cl  engine (1).h  engine.h  main.cpp
assets/: obj.mtl
src/: Cl_utils.h  Data.hcl  Input.h  channels.h  compute_pixels_kernel.cl  config.h  debug.h  functions.hcl  lighting.hcl  main.cpp  model.h  object.h  octree.h  physics.h  pixel.cl  procedural_generation.h  ray.hcl  renderer.h  vector.hpp
src/cl/: Data.hcl  functions.hcl  lighting.hcl  pixel.cl  ray.hcl
utils/: main_utilities.h  vector.hpp
