cmake_minimum_required(VERSION 3.3)
project(Voxel_Renderer VERSION 1.0) 
set(CXX_STANDARD 11)

#set(CMAKE_BUILD_TYPE Debug)
if ( ${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR} )
    message( FATAL_ERROR "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there. You may need to remove CMakeCache.txt." )
endif()

add_subdirectory(lib/SDL)
add_subdirectory(lib/SDL_ttf)
add_executable(${PROJECT_NAME} src/main.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC lib/SDL/include)
target_include_directories(${PROJECT_NAME} PUBLIC lib/SDL_ttf)
target_include_directories(${PROJECT_NAME} PUBLIC lib/PerlinNoise)
target_link_libraries(${PROJECT_NAME} SDL SDL_ttf )
file(GLOB_RECURSE shaders "*.cl" "*.hcl")
file(COPY ${shaders} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shd)